@@ -8543,10 +8543,8 @@ Ready.
 [ "streams",	"close",	"command streams.close(s:streams):void ",	"mnstr_close_streamwrap;",	"close and destroy the stream s"	]
 [ "streams",	"flush",	"command streams.flush(s:streams):void ",	"mnstr_flush_streamwrap;",	"flush the stream"	]
 [ "streams",	"openRead",	"command streams.openRead(filename:str):streams ",	"mnstr_open_rastreamwrap;",	"open ascii file stream for reading"	]
-[ "streams",	"openRead",	"command streams.openRead(s:streams):streams ",	"mnstr_stream_rstreamwrap;",	"convert an ascii stream to binary"	]
 [ "streams",	"openReadBytes",	"command streams.openReadBytes(filename:str):streams ",	"mnstr_open_rstreamwrap;",	"open a file stream for reading"	]
 [ "streams",	"openWrite",	"command streams.openWrite(filename:str):streams ",	"mnstr_open_wastreamwrap;",	"open ascii file stream for writing"	]
-[ "streams",	"openWrite",	"command streams.openWrite(s:streams):streams ",	"mnstr_stream_wstreamwrap;",	"convert an ascii stream to binary"	]
 [ "streams",	"openWriteBytes",	"command streams.openWriteBytes(filename:str):streams ",	"mnstr_open_wstreamwrap;",	"open a file stream for writing"	]
 [ "streams",	"readInt",	"command streams.readInt(s:streams):int ",	"mnstr_readIntwrap;",	"read integer data from the stream"	]
 [ "streams",	"readStr",	"command streams.readStr(s:streams):str ",	"mnstr_read_stringwrap;",	"read string data from the stream"	]
